changes on discord